Fixes T3422 - imageModal positioning for smaller screens
Summary: The imageModal was getting cut off on smaller screens, so I've made it always be centered for full visibility on the largest range of screen sizes

Test Plan:
- Open imageModal
- Resize window
- See modal stay centered

Reviewers: john, brian, pamela

Reviewed By: pamela

Subscribers: #cs

Differential Revision: https://phabricator.khanacademy.org/D14856

--- a/css/ui/tooltips.css
+++ b/css/ui/tooltips.css
@@ -271,7 +271,8 @@ html.playing .tooltip.hide-while-playing {
     width: 520px;
     margin-left: -250px;
     padding: 0;
-    top: 150px;
+    top: 50%;
+    margin-top: -225px;
 }
 
 .imagemodal h3 {
